# hello-world-avs

./: .dockerignore  .env  .env.anvil  .env.example  .env.holesky  .env.local  .eslintrc.js  .gitignore  .gitmodules  .prettierrc  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  devnet.yaml  flake.nix  jest.config.ts  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vitest.config.ts  wagmi.config.ts
.github/workflows/: ci_rust.yaml  ci_ts.yml  daily-dev-build.yml  foundry.yml  offchain-tests.yml  rust.yaml  staging.yml  test.yml
abis/: DelegationManager.json  ECDSAStakeRegistry.json  ERC20Mock.json  HelloWorldServiceManager.abi  HelloWorldServiceManager.json  IAVSDirectory.json  IDelegationManager.json  StrategyFactory.json  StrategyManager.json
contracts/: .env.example  .gitignore  foundry.toml  hello_world_avs_holesky_deployment_output.json  payments.json
contracts/anvil/: build-state.sh  deploy-el.sh  deploy-helloworld.sh  load-state.sh  load_state.sh  state.json
contracts/config/core/: 31337.json
contracts/config/hello-world/: 31337.json
contracts/deployments/: 31337.json
contracts/deployments/core/: 31337.json
contracts/deployments/hello-world/: 31337.json
contracts/mocks/: MockStrategy.sol
contracts/script/: AddNewStrategy.s.sol  DeployEigenLayerCore.s.sol  ExampleUpgrade.s.sol  HelloWorldDeployer.s.sol  HelloWorldDeployerHolesky.s.sol  HelloWorldDeployerHoleskyTenderly.s.sol  HoleskyDeployer.s.sol  SetupDistributions.s.sol  SetupPayments.s.sol  UpdateAVSMetadata.s.sol
contracts/script/deployments/: 31337.json
contracts/script/output/17000/: hello_world_avs_holesky_deployment_output.json
contracts/script/output/31337/: hello_world_avs_deployment_output.json  hello_world_avs_holesky_deployment_output.json
contracts/script/utils/: CoreDeploymentLib.sol  CoreDeploymentParsingLib.sol  HelloWorldDeploymentLib.sol  SetupDistributionsLib.sol  SetupPaymentsLib.sol  UpgradeableProxyLib.sol  Utils.sol
contracts/src/: HelloWorldServiceManager.sol  HelloWorldTaskManager.sol  IHelloWorldServiceManager.sol  IHelloWorldTaskManager.sol  IRadiusServiceManager.sol  RadiusServiceManager.sol  Ssal.sol
contracts/test/: CoreDeploymentLib.t.sol  ERC20Mock.sol  HelloWorldServiceManager.t.sol  SetupPaymentsLib.t.sol
contracts/test/mockData/config/core/: 1337.json
contracts/test/mockData/config/hello-world/: 1337.json
contracts/test/mockData/deployments/core/: 1337.json  31337.json
contracts/test/mockData/deployments/hello-world/: 1337.json  31337.json
contracts/test/mockData/scratch/: 31337.json  payment_info.json  payment_leaves.json  payments.json  payments_test.json
docs/: AddNewStrategy.md  FAQ.md  nix-setup-guide.md
operator/: config.ts  createNewTasks.ts  createTask.ts  e2e.test.ts  index.ts  monitorTasks.ts  registerAsOperator.ts  registerToAvs.ts  remoteSigner.ts  signAndRespondToTask.ts  trafficGenerator.ts
operator/abis/: avsDirectoryABI.ts  contractABI.ts  delegationABI.ts  registryABI.ts
operator/crates/operator/: Cargo.toml
operator/crates/operator/src/: lib.rs  newtask.rs  spam_tasks.rs  start_operator.rs
operator/rust/crates/bindings/: Cargo.toml
operator/rust/crates/bindings/src/: ecdsastakeregistry.rs  lib.rs
operator/rust/crates/operator/: Cargo.toml
operator/rust/crates/operator/json_abi/: DelegationManager.json  HelloWorldServiceManager.json
operator/rust/crates/operator/src/: anvil.rs  challenger.rs  lib.rs  spam_tasks.rs  start_operator.rs  test_utils.rs
operator/rust/crates/utils/: Cargo.toml
operator/rust/crates/utils/src/: helloworldservicemanager.rs  lib.rs
operator/rust/crates/utils/src/bindings/: ecdsastakeregistry.rs  helloworldservicemanager.rs  mod.rs
operator/tests/: anvilState.json  e2e.test.ts
scripts/: rewards-script-check.sh
src/: HelloWorldServiceManager.json  RegistryCoordinator.json  index.ts
tests/: commands.test.js  commands.test.ts  utils.go
tests/anvil/: avs-and-eigenlayer-deployed-anvil-state.json  deploy-avs-save-anvil-state.sh  deploy-eigenlayer-save-anvil-state.sh  eigenlayer-deployed-anvil-state.json  utils.sh
utils/: abis.js  cli.js  createStrategyForToken.js  depositTokenIntoStrategy.js  mintMockToken.js  registerAsOperator.js  registerOperatorWithAVS.js
utils/anvil/: clean-deployments.sh  deploy-avs-save-anvil-state.sh  deploy-eigenlayer-save-anvil-state.sh  genesis.json  start-anvil-chain-with-el-and-avs-deployed.sh  utils.sh
utils/anvil/avs-and-eigenlayer-deployed-anvil-state.json/: state.json
utils/anvil/eigenlayer-deployed-anvil-state.json/: state.json
utils/cli/: cli.js
utils/cli/commands/: createStrategyForToken.js  depositIntoStrategy.js  extractAbis.js  mintMockTokens.js  registerAsOperator.js
utils/cli/helpers/: readJSONFile.js  utils.js
utils/deployFromScratch/: .env.local  deploy-eigenlayer-contracts.sh  deploy-hello-world-avs-contracts.sh  start-anvil.sh  start-operator.sh  stop-anvil.sh  stop-operator.sh
