[workspace]
members = ["operator/rust/crates/operator/"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha"
edition = "2021"
authors = ["Eigen Layer contributors"]
rust-version = "1.76"
repository = "https://github.com/Layr-Labs/hello-world-avs"
homepage = ""
license-file = "LICENSE"


[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"
rustdoc.all = "warn"


[workspace.dependencies]

#tokio
tokio = {version = "1.37.0" , features = ["test-util", "full","sync","rt-multi-thread", "macros"] }
hello-world-avs-operator = {path = "operator/crates/operator"}

#eigen-rs
eigen-client-elcontracts = {git = "https://github.com/Layr-labs/eigensdk-rs", rev = "a84983e"}
eigen-types = {git = "https://github.com/Layr-labs/eigensdk-rs", rev = "a84983e"}
eigen-utils = {git = "https://github.com/Layr-labs/eigensdk-rs", rev = "a84983e"}
eigen-logging = {git = "https://github.com/Layr-labs/eigensdk-rs", rev = "a84983e"}
eigen-testing-utils = {git = "https://github.com/Layr-labs/eigensdk-rs", rev = "a84983e"}

#alloy
alloy-chains = "0.1.15"
alloy-consensus = { version = "0.1", default-features = false }
alloy-contract = { version = "0.1", default-features = false }
alloy-dyn-abi = "0.7.2"
alloy-eips = { version = "0.1", default-features = false }
alloy-genesis = { version = "0.1", default-features = false }
alloy-json-rpc = { version = "0.1", default-features = false }
alloy-network = { version = "0.1", default-features = false }
alloy-node-bindings = { version = "0.1", default-features = false }
alloy-primitives = "0.7.2"
alloy-provider = { version = "0.1", default-features = false, features = [
    "reqwest","ws"
] }
alloy-pubsub = { version = "0.1", default-features = false }
alloy-rlp = "0.3.4"
alloy-rpc-client = "0.1"
alloy-rpc-types = { version = "0.1", default-features = false, features = [
    "eth",
] }
alloy-rpc-types-admin = { version = "0.1", default-features = false }
alloy-rpc-types-anvil = { version = "0.1", default-features = false }
alloy-rpc-types-beacon = { version = "0.1", default-features = false }
alloy-rpc-types-engine = { version = "0.1", default-features = false }
alloy-rpc-types-eth = { version = "0.1", default-features = false }
alloy-rpc-types-trace = { version = "0.1", default-features = false }
alloy-rpc-types-txpool = { version = "0.1", default-features = false }
alloy-serde = { version = "0.1", default-features = false }
alloy-signer = { version = "0.1", default-features = false }
alloy-signer-aws = "0.1"
alloy-signer-local = { version = "0.1", default-features = false }
alloy-sol-types = "0.7.2"
alloy-transport = { version = "0.1" }
alloy-transport-http = { version = "0.1", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ipc = { version = "0.1", default-features = false }
alloy-transport-ws = { version = "0.1", default-features = false }
alloy-trie = "0.4"


