[package]
name = "hello-world-avs-operator"
description = "Hello world avs operator start and spam utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }
alloy-transport-http.workspace = true
alloy-rpc-types.workspace = true
tokio = {version = "1.37.0" , features = ["test-util", "full","sync"] }
futures = "0.3.30"
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-transport.workspace = true
alloy-network.workspace = true
alloy-transport-ws.workspace = true
alloy-signer-wallet.workspace = true
alloy-signer.workspace = true

[lints]
workspace = true

