[package]
name = "hello-world-avs-operator"
description = "Hello world avs operator start and spam utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-sol-types = { workspace = true, features = ["json"] }
alloy-transport-http.workspace = true
alloy-rpc-types.workspace = true
serde_json = "1.0.114"
num-bigint = "0.4.4"
reqwest = "0.12.4"
hex = "0.4.3"
once_cell = "1.19.0"
futures = "0.3.30"
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-transport.workspace = true
alloy-network.workspace = true
alloy-transport-ws.workspace = true
alloy-signer-wallet.workspace = true
alloy-signer.workspace = true

#eigen
eigen-client-elcontracts.workspace = true
eigen-types.workspace = true
eigen-utils.workspace = true

#misc 
dotenv = "0.15.0"
rand = "0.8.5"
chrono = "0.4.38"
tracing = "0.1.40"
futures-util = "0.3"
eyre = "0.6.12"
#tokio
tokio = {workspace = true, features =["full"]}

[lints]
workspace = true


[[bin]]
name = "start_operator"
path = "src/start_operator.rs"


[[bin]]
name = "spam_tasks"
path = "src/spam_tasks.rs"