[package]
name = "hello-world-avs-operator"
description = "Hello world avs operator start and spam utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
alloy = { version = "0.4.2", features = ["full"] }
serde_json = "1.0.121"
num-bigint = "0.4.4"
reqwest = "0.12.9"
hex = "0.4.3"
once_cell = "1.19.0"
futures = "0.3.30"
serde = "1.0.214"


#eigensdk-rs
eigen-client-elcontracts.workspace = true
eigen-types.workspace = true
eigen-utils.workspace = true
eigen-logging.workspace = true
eigen-testing-utils.workspace = true

hello-world-utils.workspace = true

#misc 
dotenv = "0.15.0"
rand = "0.8.5"
chrono = "0.4.38"
tracing = "0.1.40"
futures-util = "0.3"
eyre = "0.6.12"
#tokio
tokio = {workspace = true, features =["full"]}
[lints]
workspace = true


[dev-dependencies]
serial_test = "3.1.1"

[[bin]]
name = "start_operator"
path = "src/start_operator.rs"


[[bin]]
name = "spam_tasks"
path = "src/spam_tasks.rs"