[package]
name = "hello-world-avs-operator"
description = "Hello world avs operator start and spam utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
alloy.workspace = true
serde_json = "1.0.121"
num-bigint = "0.4.4"
reqwest = "0.12.9"
hex = "0.4.3"
futures = "0.3.30"
serde = "1.0.214"
testcontainers = "0.23"

#eigensdk-rs
eigensdk.workspace = true

hello-world-utils.workspace = true

#misc 
dotenv = "0.15.0"
rand = "0.9"
chrono = "0.4.38"
tracing = "0.1.40"
futures-util = "0.3"
eyre = "0.6.12"
#tokio
tokio = { workspace = true, features = ["full"] }
[lints]
workspace = true


[dev-dependencies]
serial_test = "3.1.1"

[[bin]]
name = "start_operator"
path = "src/start_operator.rs"


[[bin]]
name = "spam_tasks"
path = "src/spam_tasks.rs"

[[bin]]
name = "challenger"
path = "src/challenger.rs"
