[package]
name = "hello-world-utils"
description = "Hello world avs operator start and spam utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
alloy = { version = "0.4.2", features = ["full"] }
serde.workspace = true
serde_json = "1.0.121"
eyre = "0.6.12"
